[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "rxml"
description = "RXML is a python library to read and write xml files up to 2 times faster than python's xml included library."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Matheus Mendes", email = "mattheus2015@yahoo.com.br" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]


[tool.maturin]
features = ["pyo3/extension-module"]
